# octa_core_utils

./: .gitignore  .gitmodules  README.md  REMOVE-alias.ps1  executable-install.ps1  install.ps1
cmd/: CMakeLists.txt  build.sh  cat.c  clear.c  cp.c  df.c  du.c  env.c  grep.c  ls.c  mv.c  notify.c  octa-init.c  open.c  pwd.c  rm.c  rmdir.c  sleep.c  sptest.c  stat.c  touch.c  tree.c  which.c  whoami.c  xbrightnes.c  yes.c
docs/: generate_help_header.ps1  ochelp.c  ochelp.txt  ochelp_data.h
ext-libs/: wget.exe.hash
manifests/y/YohanesOkta/OctaCoreUtils/1.0/: YohanesOkta.OctaCoreUtils.installer.yaml  YohanesOkta.OctaCoreUtils.locale.en-US.yaml  YohanesOkta.OctaCoreUtils.yaml
net-reclaim/: main.cpp
other/: octacode.c
other/net-reclaim/: CMakelists.txt
